--- a/build.xml
+++ b/build.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="ColorMixer" default="help">
 
-    <!-- The local.properties file is created and updated by the 'android' tool.
+	<!-- The local.properties file is created and updated by the 'android' tool.
          It contains the path to the SDK. It should *NOT* be checked into
          Version Control Systems. -->
-    <loadproperties srcFile="local.properties" />
+	<loadproperties srcFile="local.properties" />
 
-    <!-- The ant.properties file can be created by you. It is only edited by the
+	<!-- The ant.properties file can be created by you. It is only edited by the
          'android' tool to add properties to it.
          This is the place to change some Ant specific build properties.
          Here are some properties you may want to change/update:
@@ -26,9 +26,9 @@
          application and should be checked into Version Control Systems.
 
          -->
-    <property file="ant.properties" />
+	<property file="ant.properties" />
 
-    <!-- The project.properties file is created and updated by the 'android'
+	<!-- The project.properties file is created and updated by the 'android'
          tool, as well as ADT.
 
          This contains project specific properties such as project target, and library
@@ -37,18 +37,15 @@
 
          This file is an integral part of the build system for your
          application and should be checked into Version Control Systems. -->
-    <loadproperties srcFile="project.properties" />
+	<loadproperties srcFile="project.properties" />
 
-    <!-- quick check on sdk.dir -->
-    <fail
-            message="sdk.dir is missing. Make sure to generate local.properties using 'android update project'"
-            unless="sdk.dir"
-    />
+	<!-- quick check on sdk.dir -->
+	<fail message="sdk.dir is missing. Make sure to generate local.properties using 'android update project'" unless="sdk.dir" />
 
 
-<!-- extension targets. Uncomment the ones where you want to do custom work
+	<!-- extension targets. Uncomment the ones where you want to do custom work
      in between standard targets -->
-<!--
+	<!--
     <target name="-pre-build">
     </target>
     <target name="-pre-compile">
@@ -61,7 +58,7 @@
     </target>
 -->
 
-    <!-- Import the actual build file.
+	<!-- Import the actual build file.
 
          To customize existing targets, there are two options:
          - Customize only one target:
@@ -79,35 +76,28 @@
          In all cases you must update the value of version-tag below to read 'custom' instead of an integer,
          in order to avoid having your file be overridden by tools such as "android update project"
     -->
-    <!-- version-tag: custom -->
-    <import file="${sdk.dir}/tools/ant/build.xml" />
+	<!-- version-tag: custom -->
+	<import file="${sdk.dir}/tools/ant/build.xml" />
 
-    <target name="dist-dir">
-        <mkdir dir="dist"/>
-    </target>
+	<target name="jar" depends="debug">
+		<delete file="bin/CWAC-ColorMixer.jar" />
+		<jar destfile="bin/CWAC-ColorMixer.jar" basedir="bin/classes" excludes="**/BuildConfig.class **/R*.class" />
+	</target>
 
-    <target name="dist-full" depends="dist-dir">
-        <delete file="dist/CWAC-ColorMixer-full.zip" />
-        <zip destfile="dist/CWAC-ColorMixer-full.zip">
-            <zipfileset
-                dir="."
-                prefix="CWAC-ColorMixer"
-                includes="**"
-                excludes="bin/**, dist/**, gen/**, .git/**, .gitignore, demo/bin/**, demo/gen/**"
-            />
-        </zip>
-    </target>
-
-    <target name="dist-lite" depends="dist-dir">
-        <delete file="dist/CWAC-ColorMixer-lite.zip" />
-        <zip destfile="dist/CWAC-ColorMixer-lite.zip">
-            <zipfileset
-                dir="."
-                prefix="CWAC-ColorMixer"
-                includes="**"
-                excludes="bin/**, dist/**, gen/**, .git/**, .gitignore, demo/**"
-            />
-        </zip>
-    </target>
+	<target name="dist-lib" depends="jar">
+		<copy todir="/tmp/CWAC-ColorMixer/libs">
+			<fileset dir="libs/" />
+		</copy>
+		<copy todir="/tmp/CWAC-ColorMixer/res">
+			<fileset dir="res/" />
+		</copy>
+		<copy file="bin/CWAC-ColorMixer.jar" todir="/tmp/CWAC-ColorMixer/libs" />
+		<copy file="AndroidManifest.xml" todir="/tmp/CWAC-ColorMixer" />
+		<copy file="build.xml" todir="/tmp/CWAC-ColorMixer" />
+		<copy file="local.properties" todir="/tmp/CWAC-ColorMixer" />
+		<copy file="project.properties" todir="/tmp/CWAC-ColorMixer" />
+		<copy file="LICENSE" todir="/tmp/CWAC-ColorMixer" />
+		<mkdir dir="/tmp/CWAC-ColorMixer/src" />
+	</target>
 
 </project>
