--- a/colormixer/build.gradle
+++ b/colormixer/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'android-library'
 apply plugin: 'android-maven'
 
 version '0.5'
-group 'com.commonsware.cwac.colormixer'
+group 'com.commonsware.cwac'
 
 android {
     compileSdkVersion 14
