--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.5.+'
+        classpath 'com.android.tools.build:gradle:0.8.+'
     }
 }
 
@@ -16,12 +16,12 @@ repositories {
 }
 
 dependencies {
-    compile 'com.commonsware.cwac:colormixer:0.5'
+    compile 'com.commonsware.cwac:colormixer:0.5.+'
 }
 
 android {
     compileSdkVersion 4
-    buildToolsVersion "18.1.0"
+    buildToolsVersion "19.0.1"
 
     sourceSets {
         main {
