--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,12 +1,3 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:0.11.+'
-    }
-}
-
 apply plugin: 'android'
 
 repositories {
@@ -16,7 +7,8 @@ repositories {
 }
 
 dependencies {
-    compile 'com.commonsware.cwac:colormixer:0.5.+'
+    debugCompile project(':colormixer')
+    releaseCompile 'com.commonsware.cwac:colormixer:0.6.+'
 }
 
 android {
