--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+PUBLISH_GROUP_ID=com.commonsware.cwac
+PUBLISH_ARTIFACT_ID=colormixer
+PUBLISH_VERSION=0.6.1
+LOCAL_REPO=file:///home/mmurphy/stuff/CommonsWare/projects/CWAC/repository
